# Social-Master

./: .gitignore  New Text Document.txt  README.md  pyproject.toml  start.bat
insta_bot/: app.py
insta_bot/pages/: medium.py
script/: start.bat
social_master/: app.py
social_master/modules/: utils.py
social_master/pages/: instagram.py  medium.py
