[tool.poetry]
name = "social_master"
version = "0.1"
description = "Social Media Bots to Automate Social Media Management Processes"
authors = ["invictus-21 <ataturhan21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
seleniumbase = "^4.17.1"
chromedriver-py = "^115.0.5790.170"
st-pages = "^0.4.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
