[tool.poetry]
name = "social_master"
version = "0.1"
description = "Social Media Bots to Automate Social Media Management Processes"
authors = ["invictus-21 <ataturhan21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
webdriver-manager = "^4.0.0"
seleniumbase = "^4.17.1"
st-pages = "^0.4.5"
chromedriver-autoinstaller = "^0.6.3"
selenium = "4.16.0"
chromedriver-py = "120.0.6099.109"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
